# hello_django_hexlet

./: .gitignore  Makefile  pyproject.toml
hello_django/: settings.py  urls.py  views.py
hello_django/calc/: urls.py  views.py
hello_django/templates/: index.html
